<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/to_do_list"
        android:textAllCaps="true"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:checkable="false"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="353dp"
        android:layout_height="478dp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTitle"
        app:layout_constraintVertical_bias="0.49">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="31dp">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox1"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox3"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox7" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="66dp">

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="232dp"
                android:layout_height="48dp"
                android:background="@drawable/background"
                android:buttonTint="@color/teal_700"
                android:rotationX="-13"
                android:text="@string/checkBox10"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>